fixed portfolio gap

--- a/screen.css
+++ b/screen.css
@@ -111,8 +111,3 @@ h2 {
 }
 
 
-#portfolio {
-		width: 60%;
-		background: #FDFDF0;
-		padding: 20px;	
-}
